Changelog for Shake

0.14.1
    #196, change the links to point at http://www.shakebuild.com/
    Improve the error messages when &%> or &?> go wrong
    Normalise file patterns used by &?>
0.14
    Make FilePattern on Windows cope with all path separators
    Rename normalise to normaliseEx
    Expose native System.FilePath in Development.Shake.FilePath
    #193, eliminate the custom version of </>
    #193, make need/orderOnly call normalise on their arguments
    #177, use the $PATH variable to resolve cmd
    #182, use js-jquery and js-flot
    #195, add getConfigKeys
    #194, replace *> with %> as the operator for rules
    #188, improve the docs on FilePattern
    #187, removeFiles on a missing directory should do nothing
    #166, add withTempFile and withTempDir in the Action monad
    Ensure Ninja response files are always deleted
    Fix incorrect units when showing profile to the console
    Require the extra library
    #178, make --help show the current executable name
0.13.4
    #171, fix the --demo mode on Linux
0.13.3
    Ensure you wait until the progress thread cleans up
    Add --demo mode
    Add --progress=record and --progress=replay
    Add -j to run with one thread per processor
    Fix progress reporting to work even on the first run
    Apply abbreviations to staunch failure messages
    Fix failure progress messages during staunch mode
    #165, make |*> matching with simple files much faster
    Add toStandard to the FilePath module
    #130, support msvc_deps_prefix in Ninja
    #157, allow variable substitution in include/subninja statements
    #147, add the version in the profile reports
    #147, add --numeric-version flag
    #28, switch to continuation passing style, uses far less threads
    #156, add readConfigFileWithEnv for configs with an initial env
    #129, fix processor count detection on Mac with -threaded
    #155, add --live and shakeLiveFiles
    #153, handle escaped spaces in parseMakefile